<resources>
    <string name="app_name">Fungi Check</string>

    <string name="tv_register">Daftar Akun</string>
    <string name="tv_q_have_account">Sudah memiliki akun?</string>
    <string name="tv_your_personality">Kepribadian Kamu</string>
    <string name="tv_your_mbti_type">Tipe MBTI Kamu</string>
    <string name="tv_welcome_back">Selamat datang kembali!</string>
    <string name="tv_welcome">Selamat datang!</string>
    <string name="tv_app_name">FUNGI CHECK</string>
    <string name="tv_login">Login</string>
    <string name="tv_q_not_have_account">Belum punya akun?</string>
    <string name="tv_recommended_learning">Rekomendasi Belajar</string>
    <string name="login_success">Login Berhasil</string>
    <string name="login_error">Login Gagal</string>
    <string name="register_success">Daftar Berhasil</string>
    <string name="register_error">Daftar Gagal</string>

    <string name="hint_full_name">Nama lengkap</string>
    <string name="hint_email_address">Alamat email</string>
    <string name="hint_password_1">Kata sandi</string>
    <string name="hint_password_2">Ketik ulang kata sandi</string>
    <string name="hint_birth_date">Tanggal lahir</string>

    <string name="btn_register">Daftar</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_logout">Keluar</string>
    <string name="btn_prediksi">Prediksi</string>

    <string name="title_prediksi">Prediksi</string>
    <string name="title_article">Artikel</string>
    <string name="title_detail">Detail Artikel</string>
    <string name="title_home">Beranda</string>
    <string name="title_profile">Profil</string>
</resources>