<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tv_app_name"
                android:textColor="@color/old_coper"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/circularRevealLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_container"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical"
            android:paddingVertical="50dp">

            <EditText
                android:id="@+id/et_email_address"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/et_container"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/et_container"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password_1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:padding="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:height="60dp"
                android:textSize="18dp"
                android:text="@string/btn_login"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/old_coper" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/circularRevealLinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/tv_q_not_have_account"
                android:fontFamily="@font/poppins_regular"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:backgroundTint="@color/old_coper"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                android:text="@string/btn_register"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</LinearLayout>
